<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/silver"
            android:padding="10dp"
            android:text="@string/set_color"
            android:textAllCaps="false"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/silver"
            android:padding="10dp"
            android:text="@string/set_translucent"
            android:textAllCaps="false"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/silver"
            android:padding="10dp"
            android:text="@string/set_gradient"
            android:textAllCaps="false"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/silver"
            android:padding="10dp"
            android:text="@string/use_in_fragment"
            android:textAllCaps="false"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/silver"
            android:padding="10dp"
            android:text="@string/switch_mode"
            android:textAllCaps="false"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</RelativeLayout>