<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient_color"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        />


    <Button
        android:id="@+id/set_gradient_21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:padding="16dp"
        android:text="@string/set_gradient_21"
        android:textAllCaps="false"/>


    <Button
        android:id="@+id/set_gradient_19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:padding="16dp"
        android:text="@string/set_gradient_19"
        android:textAllCaps="false"/>
</LinearLayout>